--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -6,6 +6,8 @@
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "module": "ESNext",
     "skipLibCheck": true,
+    "types": ["node", "react", "react-dom", "react-router-dom"],
+    "typeRoots": ["node_modules/@types"],
 
     /* Bundler mode */
     "moduleResolution": "bundler",
