--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-image-crop": "^8.1.6",
     "axios": "^1.7.8",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.3.1",
+    "react-image-crop": "^11.0.7",
     "react-router-dom": "^7.0.2",
     "sweetalert2": "^11.15.3"
   },
